Use better collection that allows #sort